force-app/main/default/objects/Transaction__c/fields/Amount_Original__c.field-meta.xml
<CustomField>
    <fullName>Amount_Original__c</fullName>
    <description>The orginal Scheduled amount for this transaction (and a copy of the actual amount for a actual transaction)

This field is used to create the Investment Graph to show Actual versus original Schedule</description>
    <label>Amount (Original)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>