force-app/main/default/objects/Transaction__c/fields/Created_Using_The_Disburse_Button__c.field-meta.xml
<CustomField>
    <fullName>Created_Using_The_Disburse_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created Using The Disburse Button</label>
    <type>Checkbox</type>
</CustomField>