force-app/main/default/objects/Transaction__c/fields/Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount__c</fullName>
    <description>The amount within this transaction assigned to fees</description>
    <inlineHelpText>The amount within this transaction assigned to fees</inlineHelpText>
    <label>Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>