force-app/main/default/objects/Transaction__c/fields/Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amount__c</fullName>
    <description>The amount within this transaction assigned to interest</description>
    <inlineHelpText>The amount within this transaction assigned to interest</inlineHelpText>
    <label>Interest Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>