force-app/main/default/objects/Transaction__c/fields/Interest_Amount_Original__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amount_Original__c</fullName>
    <label>Interest (Original)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>