force-app/main/default/objects/Transaction__c/fields/Investment_Cashflow_Amount__c.field-meta.xml
<CustomField>
    <fullName>Investment_Cashflow_Amount__c</fullName>
    <formula>CASE(text(Type__c ),
&quot;Disbursement&quot;,Amount__c,
&quot;Repayment&quot;,-Amount__c,
&quot;Fee&quot;,-Amount__c,
&quot;Disbursement Correction&quot;,-Amount__c,
&quot;Repayment Correction&quot;,Amount__c,
&quot;Fee Correction&quot;,-Amount__c,
&quot;Schedule (Paid)&quot;,-Amount__c,
&quot;Schedule (Partially Paid)&quot;,-Amount__c,
&quot;Schedule (Late)&quot;,-Amount__c,
&quot;Schedule (Not Due)&quot;,-Amount__c,
&quot;Schedule (Partially Paid (Late))&quot;,-Amount__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment Cashflow Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>