force-app/main/default/objects/Transaction__c/fields/Investment_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Investment_Reporting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Reporting</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>Transactions (Reporting)</relationshipLabel>
    <relationshipName>TransactionsSchedule</relationshipName>
    <type>Lookup</type>
</CustomField>