force-app/main/default/objects/Transaction__c/fields/Late_Repayment_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Late_Repayment_Fee_Amount__c</fullName>
    <label>Late Repayment Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>