force-app/main/default/objects/Transaction__c/fields/Loan_Event__c.field-meta.xml
<CustomField>
    <fullName>Loan_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Event</label>
    <referenceTo>Loan_Event__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>