force-app/main/default/objects/Transaction__c/fields/Migration__c.field-meta.xml
<CustomField>
    <fullName>Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is TRUE then it is a migration record</description>
    <label>Migration</label>
    <type>Checkbox</type>
</CustomField>