force-app/main/default/objects/Transaction__c/fields/Principal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Principal_Amount__c</fullName>
    <description>The amount within this transaction assigned to principal</description>
    <inlineHelpText>The amount within this transaction assigned to principal</inlineHelpText>
    <label>Principal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>