force-app/main/default/objects/Transaction__c/fields/Principal_Amount_Original__c.field-meta.xml
<CustomField>
    <fullName>Principal_Amount_Original__c</fullName>
    <label>Principal (Original)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>