force-app/main/default/objects/Transaction__c/fields/Principal_Balance__c.field-meta.xml
<CustomField>
    <fullName>Principal_Balance__c</fullName>
    <description>The total remaining Principal Balance on Investment level after this Transaction</description>
    <inlineHelpText>The total remaining Principal Balance on Investment level after this Transaction</inlineHelpText>
    <label>Principal Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>