force-app/main/default/objects/Transaction__c/fields/Repayment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repayment Schedule</label>
    <referenceTo>Repayment_Schedule__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>