force-app/main/default/objects/Transaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of transaction</description>
    <inlineHelpText>Type of transaction</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disbursement</fullName>
            </value>
            <value>
                <fullName>Repayment</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Disbursement Correction</fullName>
            </value>
            <value>
                <fullName>Repayment Correction</fullName>
            </value>
            <value>
                <fullName>Fee Correction</fullName>
            </value>
            <value>
                <fullName>Fund Drawdown</fullName>
            </value>
            <value>
                <fullName>Fund Repayment</fullName>
            </value>
            <value>
                <fullName>Schedule (Not Due)</fullName>
            </value>
            <value>
                <fullName>Schedule (Late)</fullName>
            </value>
            <value>
                <fullName>Schedule (Paid)</fullName>
            </value>
            <value>
                <fullName>Schedule (Partially Paid)</fullName>
            </value>
            <value>
                <fullName>Schedule (Partially Paid (Late))</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>