force-app/main/default/objects/Transaction__c/recordTypes/Fund_Transaction.recordType-meta.xml
<RecordType>
    <fullName>Fund_Transaction</fullName>
    <active>true</active>
    <description>A transaction between a Fund and  (optionally) another Fund</description>
    <label>Fund Transaction</label>
</RecordType>