force-app/main/default/objects/Transaction__c/recordTypes/Investment_Transaction.recordType-meta.xml
<RecordType>
    <fullName>Investment_Transaction</fullName>
    <active>true</active>
    <description>Transaction between an Investment and (optionally) a Fund</description>
    <label>Investment Transaction</label>
</RecordType>