force-app/main/default/objects/Transaction__c/validationRules/Repayment_Allocation_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Repayment_Allocation_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Transaction__c, RecordType.DeveloperName == &#39;Investment_Transaction&#39;, TEXT(Type__c) == &#39;Repayment&#39;,  TEXT(Investment__r.Loan_Product__r.Repayment_Allocation_Type__c) == &#39;Loan-based&#39;, Investment__r.Loan_Product__r.Repayment_Allocation_Order__c != Repayment_Allocation_Order__c)</errorConditionFormula>
    <errorDisplayField>Repayment_Allocation_Order__c</errorDisplayField>
    <errorMessage>Can&#39;t override the order as Repayment Allocation Type at the Loan Product level is &#39;Loan-based&#39;</errorMessage>
</ValidationRule>