force-app/main/default/objects/Transaction__c/validationRules/Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Transaction__c, ISBLANK(TEXT(Type__c)))</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Complete this field (Type)</errorMessage>
</ValidationRule>