force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Fund__c</columns>
    <columns>Investment__c</columns>
    <columns>Investment_Reporting__c</columns>
    <columns>Object_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>