force-app/main/default/objects/Transaction__c/listViews/Orphan_Transactions.listView-meta.xml
<ListView>
    <fullName>Orphan_Transactions</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Fund__c</columns>
    <columns>Investment__c</columns>
    <columns>Investment_Reporting__c</columns>
    <columns>Object_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Investment_Reporting__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Fund__c</field>
        <operation>equals</operation>
    </filters>
    <label>Orphan Transactions</label>
</ListView>